package go_consul_instance_manager

//go:generate go-enum

// ENUM(alive, pending)
type InstanceStatus uint8
